fix(core): fixed webhost and condifs

--- a/code/appsettings.Development.json
+++ b/code/appsettings.Development.json
@@ -1,4 +1,12 @@
 ﻿{
+  "BoardZ": {
+    "IdSrvUrl": "http://127.0.0.1:8001",
+    "IsHttpsRequired": false,
+    "IdSrvAudience": "api"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "foo"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
