--- a/code/appsettings.json
+++ b/code/appsettings.json
@@ -1,8 +1,11 @@
 ﻿{
   "BoardZ": {
-    "IdSrvUrl": "http://10.211.55.2:8001",
+    "IdSrvUrl": "http://boardz-id.azurewebsites.net",
     "IsHttpsRequired": false,
     "IdSrvAudience": "api"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "foo"
   },
   "Logging": {
     "IncludeScopes": true,
