--- a/docker.env.template
+++ b/docker.env.template
@@ -12,3 +12,4 @@ BoardZ__MailRecipient=string
 
 # ASP.NET Config
 ASPNETCORE_ENVIRONMENT=string (Production|Development)
+ApplicationInsights__InstrumentationKey=string
