configured app insights

--- a/code/appsettings.json
+++ b/code/appsettings.json
@@ -1,11 +1,8 @@
-﻿{
+{
   "BoardZ": {
-    "IdSrvUrl": "http://boardz-id.azurewebsites.net",
-    "IsHttpsRequired": false,
+    "IdSrvUrl": "https://boardz-id.azurewebsites.net",
+    "IsHttpsRequired": true,
     "IdSrvAudience": "api"
-  },
-  "ApplicationInsights": {
-    "InstrumentationKey": "foo"
   },
   "Logging": {
     "IncludeScopes": true,
